YAML shows an example for Rails

--- a/examples/yaml_example.yml
+++ b/examples/yaml_example.yml
@@ -1,3 +1,6 @@
-pretty_anything_you_want: Hey there!
-user: somu
-repo: sword
+version: 4.0.0
+user: rails
+repo: rails
+
+mvc: "[MVC](http://en.wikipedia.org/wiki/Model%E2%80%93view%E2%80%93controller)"
+mit: "[MIT](http://www.opensource.org/licenses/MIT)"
